--- a/GooglePlay/files/编辑精选/styles.css
+++ b/GooglePlay/files/编辑精选/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:348px;
+  width:663px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -1476,4 +1476,35 @@
   width:0px;
   visibility:hidden;
   word-wrap:break-word;
+}
+#u496_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:289px;
+  height:53px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u496 {
+  border-width:0px;
+  position:absolute;
+  left:374px;
+  top:107px;
+  width:289px;
+  height:53px;
+}
+#u496_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:289px;
+  white-space:nowrap;
 }
