--- a/GooglePlay/files/首页/styles.css
+++ b/GooglePlay/files/首页/styles.css
@@ -2362,3 +2362,34 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u86_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:131px;
+  height:70px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u86 {
+  border-width:0px;
+  position:absolute;
+  left:367px;
+  top:248px;
+  width:131px;
+  height:70px;
+}
+#u86_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:131px;
+  white-space:nowrap;
+}
